# simple_locations

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  dev.in  dev.txt  forms.py  manage.py  mkdocs.yml  models.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  translation.py  urls.py  views.py
.github/workflows/: build.yml  lint.yml  pytest.yaml
management/commands/: dump_locations.py
migrations/: 0001_initial.py  0001_initial_squashed_0008_auto_20200804_0554.py  0002_load_initial_data.py  0002_load_initial_data_squashed_0008_auto_20200804_0554.py  0003_auto_20170320_1024.py  0006_auto_20180202_1540.py  0007_area_geom_can_be_blank.py  0008_auto_20200804_0554.py
notebooks/: generating_borders.ipynb
simple_locations/: admin.py  api.py  autocomplete_admin.py  feature_manager.py  forms.py  gis_functions.py  json_urls.py  json_views.py  manager.py  model_schemas.py  models.py  models.pyi  requirements.in  requirements.txt  router.py  schemas.py  translation.py  urls.py  views.py  wsgi.py
simple_locations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simple_locations/fixtures/: initial_data.json
simple_locations/lib/: autocomplete_admin.py
simple_locations/management/commands/: create_borders.py  create_projected_areas.py  dump_locations.py  import_dird.py
simple_locations/migrations/: 0001_initial.py  0002_auto_20170130_1127.py  0002_auto_20170309_1513.py  0002_auto_20170329_1400.py  0002_load_initial_data.py  0003_auto_20170130_1648.py  0004_auto_20170330_1618.py  0005_auto_20170403_1507.py  0008_default_autofields.py  0009_auto_20211111_0805.py  0009_django31_and_modeltrans_reset.py  0010_add_border_model.py  0011_denormed_border_fields.py  0012_auto_20220221_0817.py  0013_auto_20220307_0618.py  0014_area_validity_period.py  0014_topology_alter_area_id_alter_areaindicator_id_and_more.py  0015_add_area_metadata.py
simple_locations/templates/simple_locations/: location_edit.html
simple_locations/templates/simple_locations/admin/: osm.html  osm.js
sl_tests/: apps.py  models.py
sl_tests/migrations/: 0001_initial.py
static/css/: tree.css
static/javascripts/: simple_locations.js
tests/: factories.py  test_api.py  test_feature_manager.py  test_intersects_areas.py  test_load_geojson.py  test_settings.py
