[tool.isort]
profile = 'black'
skip = ['env', 'migrations']

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | migrations
)/
'''

[tool.ruff]
line-length = 119
exclude = ['migrations']

[tool.poetry]
name = "simple-locations"
version = "4.1.0a0"
description = "The common location package for Catalpa's projects"
authors = [
  "Joshua Brooks <josh@catalpa.io>",
  "Anders Hofstee <anders@catalpa.io>",
  "Nicoas Hoibian <admin@catalpa.io>",
]
license = "BSD"

readme = 'README.md'

repository = "https://github.com/catalpainternational/simple_locations"
homepage = "https://github.com/catalpainternational/simple_locations"

[tool.poetry.dependencies]
python = "^3.8"
django-mptt = "^0.14.0"
pydantic = ">1.10.6,<2"
django-ninja = "^0.21.0"
django-geojson = "^4.0.0"
geojson-pydantic = "^0.6.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
flake8 = "*"
isort = "*"
pre-commit = "*"
mypy = "*"
django-stubs = {extras = ["compatible-mypy"], version = "^1.16.0"}
psycopg2-binary = "*"
pytest-django = "*"
pytest-cov = "*"
factory-boy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.test_settings"

[[tool.mypy.overrides]]
module = "setuptools"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.factories"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "factory"
ignore_missing_imports = true
